Continued working on pet store project - week 15